# demopybot

./: .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  faq.csv  faqmigrate.py  main.py  pyproject.toml  watcher.py
alembic/: env.py
alembic/versions/: 0c7700122655_.py  0e14368e1390_.py  1b282599d8e7_.py  4a5c047ebd86_.py  57a44779e6bc_.py  7c08635f6e16_.py  831cff0bedcb_.py  9a03d68769cc_.py  aef8b9a22a67_.py  bc37be9e2ca3_.py
modules/: qiwi.py
modules/callback_handler/: __init__.py
modules/commands/: __init__.py
modules/config/: __init__.py
modules/db/: __init__.py  __main__.py
modules/dbtg/: __init__.py
modules/dialogs/: __init__.py  config.py
modules/joinrequest/: __init__.py
modules/keyboards/: __init__.py  config.py  tools.py
modules/userstat/: __init__.py
