[tool.poetry]
name = "infotemplate"
version = "0.1.0"
description = "Template for Telegram bots"
authors = ["Akulij <aakulij@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
modules = { path = "./modules" }
aiogram = "^2.25.1"
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
python-dotenv = "^1.0.0"
alembic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
